solved the encapsulation problem for JSK 16+